# tiny-firestore-odm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: client.rs  collection.rs  database.rs  dynamic_firestore_client.rs  identifiers.rs  lib.rs  list_response.rs  qualified_document_name.rs
tests/: integration_test.rs
