[package]
name = "tiny-firestore-odm"
version = "0.1.0"
edition = "2018"
description = "A tiny object-document mapper for Google Firestore, focusing on a key/value object store usage model."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["firestore", "gcp"]
repository = "https://github.com/paulgb/tiny-firestore-odm"

[dependencies]
anyhow = "1.0.44"
bytes = "1.1.0"
firestore-serde = "0.1.1"
google-authz = "0.0.2"
hyper = "0.14.13"
serde = { version = "1.0.130", features = ["derive"] }
tokio = "1.12.0"
tonic = { version = "0.5.2", features = ["tls"] }
googapis = { version = "0.5.0", features = ["google-firestore-v1"] }
tokio-stream = "0.1.7"
tower-service = "0.3.1"
http = "0.2.5"

[dev-dependencies]
serde_json = "1.0.68"
uuid = { version = "0.8.2", features = ["v4"] }
